tests/src/frontend/syntax/invalid/invalid_lambda.sk

fun test(): void {
  0 -> 0
}
